--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.1",
     "resolve": "1.6.0",
+    "serve": "^6.5.5",
     "style-loader": "0.19.0",
     "styled-components": "^3.2.5",
     "sw-precache-webpack-plugin": "0.11.4",
